# docbuddy

./: README.md  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  shortcuts.rs
src/assets/: main.postcss
src/components/: LoadingSpinner.vue  ResultsList.vue  Search.vue  WebsitePreviewModal.vue
src/config/: bangs.ts
src/types/: search-response.ts
src/utils/: window.ts
