[package]
name = "docbuddy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "window-set-skip-taskbar", "window-hide", "window-center", "window-show", "window-set-size", "window-set-focus", "global-shortcut-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.5"
scraper = "0.19.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
